--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 body {
   background: #fafafa;
-  color: #f56e6e;
+  color: #333333;
   margin-top: 5rem;
 }
 
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .bg-steel {
-  background-color: #f56e6e;
+  background-color: #5f788a;
 }
 
 .site-header .navbar-nav .nav-link {
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a.article-title:hover {
-  color: #f56e6e;
+  color: #428bca;
   text-decoration: none;
 }
 
@@ -58,7 +58,7 @@ a.article-title:hover {
 }
 
 .article-metadata a:hover {
-  color: #333333;
+  color: #333;
   text-decoration: none;
 }
 
