--- a/template/home.html
+++ b/template/home.html
@@ -66,7 +66,7 @@
 
     <h3>Details </h3>
     <p>Welcome to the home page of the app.</p>
-    <p>This is mainly based on as the application of the machine learning,meant to be employed in the remote and the downtrodden area.
+    <p>This website is mainly based on as the application of the machine learning,meant to be employed in the remote and the downtrodden area.
       <h3>Overview</h3>
       In todays time we see a lot of the shortage of the doctors in the world especially in India.A lot of people are suffering a lot without the help of the proper medical checkup.Also most of the cases many cases arise leading to dealth due to lack of timely medical checkup<p>
         <p>So to cope up with all of those problems this app is designed which would prove its benefits upto much extent.
