--- a/template/home.html
+++ b/template/home.html
@@ -30,7 +30,7 @@
 
      
 
-      <a class="navbar-brand mr-4" href="/">Med-Predict</a>
+      <a class="navbar-brand mr-4" href="/">Diagomate</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
