--- a/template/kidney.html
+++ b/template/kidney.html
@@ -27,7 +27,7 @@
     <header class="site-header">
   <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
     <div class="container">
-      <a class="navbar-brand mr-4" href="/">DJ's Medical App</a>
+      <a class="navbar-brand mr-4" href="/">Diagomate</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,8 +40,7 @@
           <a class="nav-item nav-link" href="/heart">Heart</a>
           <a class="nav-item nav-link" href="/liver">Liver</a>
           <a class="nav-item nav-link" href="/kidney">Kidney</a>
-           <a class="nav-item nav-link" href="/Malaria">Malaria</a>
-           <a class="nav-item nav-link" href="/Pneumonia">Pneumonia</a>
+          
 
         </div>
         <!-- Navbar Right Side
