--- a/template/result.html
+++ b/template/result.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
     <div class="container">
 
-      <a class="navbar-brand mr-4" href="/">ML-MT app</a>
+      <a class="navbar-brand mr-4" href="/">Diagomate</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,8 +30,7 @@
           <a class="nav-item nav-link" href="/heart">Heart</a>
           <a class="nav-item nav-link" href="/liver">Liver</a>
           <a class="nav-item nav-link" href="/kidney">Kidney</a>
-           <a class="nav-item nav-link" href="/Malaria">Malaria</a>
-           <a class="nav-item nav-link" href="/Pneumonia">Pneumonia</a>
+         
         </div>
         <!-- Navbar Right Side 
         <div class="navbar-nav">
@@ -46,7 +45,5 @@
           <h2>The result is : </h2><br>
           <h3> {{ prediction }}</h3>
         <form action=""http://localhost:5000/result",method="post">
-        <p>Want to know more about the Disease and its symptoms ?</p>
-        <a class="nav-item nav-link" href="/about">Click Me !</a>
         </form>
 </header>
