--- a/template/cancer.html
+++ b/template/cancer.html
@@ -33,7 +33,7 @@
         <div class="navbar-nav mr-auto">
           <a class="nav-item nav-link" href="/">Home</a>
           <a class="nav-item nav-link" href="/about">About</a>
-          <a class="nav-item nav-link" href="/cancer">Cancer</a>
+          <a class="nav-item nav-link" href="/cancer">Breast-Cancer</a>
           <a class="nav-item nav-link" href="/diabetes">Diabetes</a>
           <a class="nav-item nav-link" href="/heart">Heart</a>
           <a class="nav-item nav-link" href="/liver">Liver</a>
