--- a/template/about.html
+++ b/template/about.html
@@ -77,11 +77,11 @@
 
 	<div class="container">
 		<h1>Details : </h1>
-    <h3>This is a basic machine learning and deep learning based medical app.</h3>
+    <h3>This is a basic machine learning based medical app.</h3>
     <p>The prediction about the disease is made with the help of the machine learning model which itself is trained on the thousands of the datasets</p>
 		
     <h2>1. Breast Cancer </h2>
-    <p>Breast cancer is cancer that develops from breast tissue. Signs of breast cancer may include a lump in the breast, a change in breast shape, dimpling of the skin, fluid coming from the nipple, a newly inverted nipple, or a red or scaly patch of skin.<br></p>
+    <p>Breast cancer is cancer that forms in the cells of the breasts. After skin cancer, breast cancer is the most common cancer diagnosed in women in the United States. Breast cancer can occur in both men and women, but it's far more common in women.<br></p>
 
     <h3>Symptoms</h3>
     <p>Signs and symptoms of breast cancer may include:</p>
@@ -92,10 +92,8 @@
       <li>
         Changes to the skin over the breast, such as dimpling
       </li>
-      <li>
-        A newly inverted nipple
-      </li>
-      <li>Peeling, scaling, crusting or flaking of the pigmented area of skin surrounding the nipple (areola) or breast skin</li>
+
+      <li>Peeling, scaling, crusting or flaking of the pigmented area of skin surrounding the breast skin</li>
       <li>Redness or pitting of the skin over your breast, like the skin of an orange</li>
     </ul>
     <h3>Causes</h3>
