--- a/template/cancer.html
+++ b/template/cancer.html
@@ -89,7 +89,7 @@
     <input type="text" id="symmetry_mean" name="symmetry_mean">
     <br>
 
-    <label for="Compactness_mean">Fractal_dimension_mean: </label>
+    <label for="fractal_dimension_mean">Fractal_dimension_mean: </label>
     <input type="text" id="fractal_dimension_mean" name="fractal_dimension_mean">
     <br>
 
