--- a/template/home.html
+++ b/template/home.html
@@ -62,9 +62,9 @@
 
     <h3>Details </h3>
     <p>Welcome to the home page of the app.</p>
-    <p>This website is mainly based on as the application of the machine learning,meant to be employed in the remote and the downtrodden area.
+    <p>This website is mainly based on as the application of the machine learning, meant to be employed in the remote and the downtrodden area.
       <h3>Overview</h3>
-      In todays time we see a lot of the shortage of the doctors in the world especially in India.A lot of people are suffering a lot without the help of the proper medical checkup.Also most of the cases many cases arise leading to dealth due to lack of timely medical checkup<p>
+      In todays time we see a lot of the shortage of the doctors in the world especially in India. A lot of people are suffering from Diabetes and don't the help of the proper medical checkup. Also most of the cases many cases arise leading to dealth due to lack of timely medical checkup<p>
         <p>So to cope up with all of those problems this app is designed which would prove its benefits upto much extent.
         </p>
         <hr>
@@ -72,7 +72,7 @@
     <h3>Application</h3>
     <ul>
       <li>To remove the dependencies on the doctors</li>
-      <li>To help out the poor and helpless people with the normal medical checkup</li>
+      <li>To help out the poor and helpless people getting to know if they have diabetes or not</li>
       <li>To help people avoid paying huge  amount to the doctors unnecessarily</li>
       <li>To extend the role of the technology in the medical field</li>
     </ul>
